--- a/hello_world_project/hello/templates/hello/layout.html
+++ b/hello_world_project/hello/templates/hello/layout.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <title>{% block title %}{% endblock %}</title>
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'hello/site.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'hello/site.css' %}" />
 </head>
 
 <body>
-<div class="navbar">
-    <a href="{% url 'home' %}" class="navbar-brand">Home</a>
-    <a href="{% url 'openai' %}" class="navbar-item">Open AI</a>
-    <a href="{% url 'log' %}" class="navbar-item">Log Message</a>
-    <a href="{% url 'about' %}" class="navbar-item">About</a>
-    <a href="{% url 'contact' %}" class="navbar-item">Contact</a>
-</div>
+    <div class="navbar">
+        <a href="{% url 'home' %}" class="navbar-brand">Home</a>
+        <a href="{% url 'openai' %}" class="navbar-item">Open AI</a>
+        <a href="{% url 'log' %}" class="navbar-item">Log Message</a>
+        <a href="{% url 'about' %}" class="navbar-item">About</a>
+        <a href="{% url 'contact' %}" class="navbar-item">Contact</a>
+        {% if request.session.user_id %}
+        <a href="{% url 'logout' %}" class="navbar-item">Logout</a>
+        {% else %}
+        <a href="{% url 'login' %}" class="navbar-item">Login</a>
+        {% endif %} 
+    </div>
 
-<div class="body-content">
-    {% block content %}
-    {% endblock %}
-    <hr/>
-    <footer>
-        <p>&copy; 2018</p>
-    </footer>
-</div>
+    <div class="body-content">
+        {% block content %}
+        {% endblock %}
+        <hr />
+        <footer>
+            <p>&copy; 2018</p>
+        </footer>
+    </div>
 </body>
+
 </html>
